5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1593_820.log
== SUBMITION (2019-03-28 11:09:32) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
valor // 50 = notas_R50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R$50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R$10 = resto_R$50 % 10

# Quantidade de notas de R$ 2
notas_R$2 = resto_R$10 // 2

print(int(notas_R$50))
print(int(notas_R$10))
print(int(notas_R$2))

-- EXECUTION TIME:
0.106471
-- ERROR:
  File "/home/codebench/codes/1593/820/main.py", line 14
    notas_R10 = resto_R$50 // 10
                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:09:48) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
valor // 50 = notas_R50

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.164647
-- ERROR:
  File "/home/codebench/codes/1593/820/main.py", line 8
    valor // 50 = notas_R50
    ^
SyntaxError: can't assign to operator

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:14:12) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

VALOR = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
 notas_R50 = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.223467
-- ERROR:
  File "/home/codebench/codes/1593/820/main.py", line 8
    notas_R50 = valor // 50 
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:14:41) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
 notas_R50 = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.180677
-- ERROR:
  File "/home/codebench/codes/1593/820/main.py", line 8
    notas_R50 = valor // 50 
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:14:44) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
 notas_R50 = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.199969
-- ERROR:
  File "/home/codebench/codes/1593/820/main.py", line 8
    notas_R50 = valor // 50 
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:14:54) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
 notas_R50 = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- ERROR:
File "XXXX", line 8
    notas_R50 = valor // 50 
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:15:12) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas_R50 = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- OUTPUT:
40
2
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:15:27) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 01 - Ex 10
# 20 / 05 / 2016

valor = int(input("Qual o valor do saque? "))

# Quantidade de notas de R$ 50
notas_R50 = valor // 50 

# Valor restante a ser sacado com notas menores que R$ 50
resto_R50 = valor % 50

# Quantidade de notas de R$ 10
notas_R10 = resto_R50 // 10

# Valor restante a ser sacado com notas menores que R$ 50
resto_R10 = resto_R50 % 10

# Quantidade de notas de R$ 2
notas_R2 = resto_R10 // 2

print(int(notas_R50))
print(int(notas_R10))
print(int(notas_R2))

-- EXECUTION TIME:
0.144555
-- TEST CASE 1:
---- input:
2028
---- correct output:
40
2
4
---- user output:
40
2
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
